<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".EsspresoAct">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Run test"
        android:id="@+id/espressoone_btn"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/espressoone_inner_container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/espressoone_btn"
        android:layout_margin="20dp">

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/espressoone_tv"
            android:layout_weight="1"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/espressoone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="EditText"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/espressoone_starttwo_btn"
        android:layout_height="wrap_content"
        android:text="Start EspressoTwo"
        android:layout_below="@+id/espressoone_inner_container"/>

</RelativeLayout>
