<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="hr.span.tmartincic.testing.esspresso.ActivityTwo">

    <TextView
        android:id="@+id/activitytwo_tv"
        android:text="@string/activity_two_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
